--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,12 @@
             <artifactId>log4j-core</artifactId>
             <version>2.20.0</version>
         </dependency>
+        <dependency>
+            <groupId>junit</groupId>
+            <artifactId>junit</artifactId>
+            <version>4.13.1</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
@@ -57,6 +63,8 @@
                 <version>3.11.0</version>
                 <configuration>
                     <release>17</release>
+                    <source>19</source>
+                    <target>19</target>
                 </configuration>
             </plugin>
 
