--- a/pom.xml
+++ b/pom.xml
@@ -76,6 +76,14 @@
                     </execution>
                 </executions>
             </plugin>
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>3.1.0</version>
+                <configuration>
+                    <mainClass>quanlythietbi.DeviceManagementApplication</mainClass>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
